@@ -6,6 +6,8 @@ Revision history for Perl extension Net::SSLeay.
 	Patch: Generated C code is not compatible with MSVC, AIX cc,
 	probably others. Added some PREINIT blocks and replaced 2 cases of INIT with
 	PREINIT. From Andy Grundman. Thanks.
+	Patch to fix: Fails to compile if the OpenSSL library it's built
+	against has compression support compiled out. From Stephan Wall. Thanks.
 
 1.78	 2016-08-13
 	 Fixed broken OCSP code and tests. Broken since 1.75. Patched by
